#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.63])
AC_INIT([selectSubject], [1.0], 163@qq.com)
AC_CONFIG_SRCDIR([serverdFunction.c])
AC_OUTPUT(Makefile)
AM_INIT_AUTOMAKE(selectSubject,1.0)
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_PID_T

# Checks for library functions.
AC_FUNC_FORK
AC_CHECK_FUNCS([memset socket])

AC_OUTPUT
